# cmp_template_engine

./: CHANGELOG.md  Cargo.toml  Makefile  README.md
benches/: bench-big-table.rs  bench-teams-so.rs  bench-teams.rs  create_data.rs
src/: ben_askama.rs  ben_sailfish.rs  ben_sailfish_buf.rs  ben_sailfish_buf_fmt.rs  ben_std_fmt_write.rs  ben_std_format.rs  ben_std_io_write.rs  ben_tinytempl.rs  lib.rs
templates/: big-table.atpl  big-table.stpl  teams-so.atpl  teams-so.stpl  teams.atpl  teams.stpl
xtask/src/: shape_benchmark_results.rs
