[package]
name = "cmp_template_engine"
version = "0.1.0"
authors = ["aki <aki.akaguma@hotmail.com>"]
edition = "2018"
description = "research: compare template-engine for non-html"
keywords = ["template"]
categories = ["template-engine"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[features]

[dependencies]
anyhow = "1.0"
sailfish = "0.3"
askama = "0.10"
tinytemplate = "1.2"
serde = { version = "1.0", features = ["derive"] }
itoap = "1.0"

[dev-dependencies]
criterion = "0.3"

[workspace]
members = [
    "xtask",
]

[[bench]]
name = "bench-teams"
path = "benches/bench-teams.rs"
harness = false

[[bench]]
name = "bench-big-table"
path = "benches/bench-big-table.rs"
harness = false

#[[bin]]
#name = "bin-match-string"
#path = "src/bin-match-string.rs"
